small change to snn model page layout

--- a/src/resources/snn_model_page.html
+++ b/src/resources/snn_model_page.html
@@ -12,14 +12,14 @@
         <!-- SNN神经元信息 -->
         <div class="col-md-6">
             <div id="model_layers_vis_tab_caption" style="font-size: large;font-weight: bold;text-align: center;">脉冲神经网络神经元组信息</div>
-            <table id="snn_neurons_table" style="width: 400px;margin-left:10px;margin-left: 200px;">
+            <table id="snn_neurons_table" style="width: 400px;margin-left:10px;margin-left: 100px;">
                 <caption class="white-text" style="caption-side: top;text-align: center;"></caption>
                 <thead>
                   <tr style="margin-top: 15px;">
-                    <td style="font-size: medium;font-weight: bold;">layer编号</td>
-                    <td style="font-size: medium;font-weight: bold;">神经元个数</td>
-                    <td style="font-size: medium;font-weight: bold;">求解方法</td>
-                    <td style="font-size: medium;font-weight: bold;">电压阈值</td>
+                    <td style="font-size: medium;font-weight: bold;width: 120px;">layer编号</td>
+                    <td style="font-size: medium;font-weight: bold;width: 120px;">神经元个数</td>
+                    <td style="font-size: medium;font-weight: bold;width: 120px;">求解方法</td>
+                    <td style="font-size: medium;font-weight: bold;width: 120px;">电压阈值</td>
                   </tr>
                   <!-- 动态加载 -->
                 </thead>
@@ -28,20 +28,20 @@
 
         <div class="col-md-6">
             <div id="model_layers_vis_tab_caption" style="font-size: large;font-weight: bold;text-align: center;">脉冲神经网络突触连接信息</div>
-            <table id="layer_conns_table" style="width: 420px;margin-left:200px;">
+            <table id="layer_conns_table" style="width: 420px;margin-left:100px;">
                 <caption class="white-text" style="caption-side: top;text-align: center;"></caption>
                 <thead>
                   <tr style="margin-top: 15px;">
-                    <td style="font-size: medium;font-weight: bold;">layer编号</td>
-                    <td style="font-size: medium;font-weight: bold;">连接稠密度</td>
-                    <td style="font-size: medium;font-weight: bold;">平均连接个数</td>
+                    <td style="font-size: medium;font-weight: bold;width: 120px;">layer编号</td>
+                    <td style="font-size: medium;font-weight: bold;width: 120px;">连接稠密度</td>
+                    <td style="font-size: medium;font-weight: bold;width: 120px;">平均连接个数</td>
                   </tr>
                   <!-- 动态加载 -->
                 </thead>
             </table>
         </div>
     </div>
-    <div class="row" style="margin-top: 50px;">
+    <div class="row" style="margin-top: 100px;">
         <!--权重分布图-->
         <div class="col-md-6">
             <div id="model_layers_vis_tab_caption" style="font-size: large;font-weight: bold;text-align: center;">脉冲神经网络权重分布</div>
@@ -49,7 +49,7 @@
         </div>
         <div class="col-md-6">
             <div style="font-size: large;font-weight: bold;text-align: center;">模型连接图</div>
-            <div id="sangky_chart" style="width: 440px;height: 340px;display: inline-block;"></div>
+            <div id="sangky_chart" style="width: 480px;height: 340px;display: inline-block;margin-left: 120px;"></div>
         </div>
     </div>
 </body>
