fix for activity bar icons

--- a/src/resources/model_convertor_page_v3.html
+++ b/src/resources/model_convertor_page_v3.html
@@ -448,6 +448,8 @@ let log_output_lists = new Array();
                 document.getElementById("search_progress_div").style.width = "0%";
                 document.getElementById("darlang_progress_div").style.width = "0%";
                 document.getElementById("total_progress_div").style.width = "0%";
+
+                ("#log_output_div").html("模型转换启动中......");
               }
           });
 
