change js and css resource using local resource, now finish start page and data vis page

--- a/src/resources/convertor_page_v2.html
+++ b/src/resources/convertor_page_v2.html
@@ -167,9 +167,13 @@ body {
    height:auto !important;
 }
 </style>
-<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+<!-- <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+
+<link rel="stylesheet" href="http://localhost:6003/css/bootstrap.min.css">
+<script src="http://localhost:6003/js/jquery.min.js"></script>
+<script src="http://localhost:6003/js/bootstrap.min.js"></script>
 
 <script>
 
