--- a/src/resources/test.html
+++ b/src/resources/test.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="./anime.js"></script>
-        <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="http://localhost:6003/js/jquery.min.js"></script>
         <style type="text/css">
             .square{
                 width: 300px;
@@ -75,17 +74,6 @@
 
         $("#input_btn").change(()=>{
             console.log("input butn clicked!!");
-        });
-
-        
-        var myAnimation = anime({
-            targets: ".arrow-right-1",
-            translateX: '2rem',
-            rotate: -90,
-            background:"#09ca6a",
-            easing:"easeInOutQuad",
-            duration: 1000,
-            loop: true
         });
     </script>
 </html>
