move ann snn model conversion start from right click to activity icon

--- a/src/resources/model_convertor_page_v3.html
+++ b/src/resources/model_convertor_page_v3.html
@@ -443,6 +443,7 @@ let log_output_lists = new Array();
                     "delay":delay,
                     "dura":dura
                 }}));
+                log_output_lists.splice(0);
                 document.getElementById("model_convert_progress_div").style.width = "0%";
                 document.getElementById("preprocess_progress_div").style.width = "0%";
                 document.getElementById("search_progress_div").style.width = "0%";
@@ -505,6 +506,7 @@ let log_output_lists = new Array();
             let delay = $("#select_delay").val().replace("ms", "");
             let dura = $("#select_dura").val().replace("ms","");
             console.log("v_thresh="+v_thresh+", neuron_dt="+neuron_dt+", synapse_dt="+synapse_dt+", delay="+delay+", dura="+dura);
+            log_output_lists.splice(0);
             // // 传递到插件
             // vscode.postMessage(JSON.stringify({"convertor_params_change":{
             //     "v_thresh":v_thresh,
