--- a/src/resources/convertor_page_data_v2.html
+++ b/src/resources/convertor_page_data_v2.html
@@ -23,30 +23,30 @@
 
       <!--展示的主面板-->
       <div class="row" style="height: 45%;width: 100%;">
-          <div class="col-md-6">
+          <div class="col-md-6" style="background: rgba(238,238,238,0.4);">
             <!-- 数据基本信息表格 -->
-            <table id="data_general_table" style="width:440px; margin-left:100px;">
-              <caption class="white-text" style="caption-side: top;font-weight: bold;text-align: center;font-size: large;">导入数据统计</caption>
+            <table id="data_general_table" style="width:440px; margin-left:100px;color: #333;">
+              <caption class="white-text" style="caption-side: top;font-weight: bold;text-align: center;font-size: large;"><font style="color: #333;">导入数据统计</font></caption>
               <tr style="border: solid 3px;height: 40px;">
-                <td style="font-size: medium;font-weight: bold;padding-left: 15px;">总数据大小</td>
-                <td id="total_data_amount"></td>
+                <td style="font-size: medium;font-weight: bold;padding-left: 15px;background: rgb(238,238,238);">总数据大小</td>
+                <td id="total_data_amount" style="font-weight:bolder;">ooooooooooooe</td>
               </tr>
               <tr style="border: solid 3px;height: 40px;">
-                <td style="font-size: medium;font-weight: bold;padding-left: 15px;">测试数据量</td>
-                <td id="test_data_amount"></td>
+                <td style="font-size: medium;font-weight: bold;padding-left: 15px;background: rgb(238,238,238);">测试数据量</td>
+                <td id="test_data_amount" style="font-weight: bolder;"></td>
               </tr>
               <tr style="border: solid 3px;height: 40px;">
-                <td style="font-size: medium;font-weight: bold;padding-left: 15px;">验证数据量</td>
-                <td id="val_data_amount"></td>
+                <td style="font-size: medium;font-weight: bold;padding-left: 15px;background: rgb(238,238,238);">验证数据量</td>
+                <td id="val_data_amount" style="font-weight: bolder;"></td>
               </tr>
               <tr style="border: solid 3px;height: 40px;">
-                <td style="font-size: medium;font-weight: bold;padding-left: 15px;">数据类别个数</td>
-                <td id="class_counts"></td>
+                <td style="font-size: medium;font-weight: bold;padding-left: 15px;background: rgb(238,238,238);">数据类别个数</td>
+                <td id="class_counts" style="font-weight: bolder;"></td>
               </tr>
             </table>
           </div>
           <div class="col-md-6">
-            <div style="text-align: center;font-weight: bold;font-size: large;margin-bottom:20px;">
+            <div style="text-align: center;font-weight: bold;font-size: large;margin-bottom:20px;color: #333;">
               数据类别分布
             </div>
             <div id="bar_chart_testdata_container" style="width: 440px;height: 300px;margin-left:100px;"></div>
@@ -54,7 +54,7 @@
       </div>
       <div class="row" style="height: 45%;width: 100%;margin-top:35px;">
         <div id="sample_data_div" class="col-md-6">
-          <div style="text-align: center;font-weight: bold;font-size: large;margin-left:15px;">
+          <div style="text-align: center;font-weight: bold;font-size: large;margin-left:15px;color: black;">
             训练集样例数据
           </div>
           <ul id="sample_imgs_ul" style="height: 300px;width: 100px;overflow: auto;display: inline-block;">
@@ -92,7 +92,7 @@
           <div id="bar_chart_histgram" style="width: 440px;height: 320px;margin-top: 0px;display: inline-block;"></div>
         </div>
         <div id="sample_testdataset_data_div" class="col-md-6">
-          <div style="text-align: center;font-weight: bold;font-size: large;margin-left:15px;">
+          <div style="text-align: center;font-weight: bold;font-size: large;margin-left:15px;color: black;">
             测试集样例数据
           </div>
           <ul id="test_sample_imgs_ul" style="height: 300px;width: 100px;overflow: auto;display: inline-block;">
@@ -140,13 +140,13 @@
 
 body {
   padding: 25px;
-  background-color: black;
+  background-color: rgb(251, 255, 255);
   color: white;
   font-size: 25px;
 }
 
 .dark-mode {
-  background-color: rgb(61, 57, 57);
+  background-color: rgb(249, 251, 252);
   color: white;
 }
   @font-face {
