--- a/src/resources/convertor_page_data_v2.html
+++ b/src/resources/convertor_page_data_v2.html
@@ -23,29 +23,29 @@
 
       <!--展示的主面板-->
       <div class="row" style="height: 45%;width: 100%;">
-          <div class="col-md-6" style="background: rgba(238,238,238,0.4);">
+          <div class="col-md-6" style="background: rgba(238,238,238,0.4);height: 345px;">
             <!-- 数据基本信息表格 -->
             <table id="data_general_table" style="width:440px; margin-left:100px;color: #333;">
               <caption class="white-text" style="caption-side: top;font-weight: bold;text-align: center;font-size: large;"><font style="color: #333;">导入数据统计</font></caption>
               <tr style="border: solid 3px;height: 40px;">
-                <td style="font-size: medium;font-weight: bold;padding-left: 15px;background: rgb(238,238,238);">总数据大小</td>
-                <td id="total_data_amount" style="font-weight:bolder;">ooooooooooooe</td>
+                <td style="font-size: medium;font-weight: bold;padding-left: 15px;background: rgb(238,238,238);border: solid 2px;">总数据大小</td>
+                <td id="total_data_amount" style="font-weight:bolder;padding-left: 10px;"></td>
               </tr>
               <tr style="border: solid 3px;height: 40px;">
-                <td style="font-size: medium;font-weight: bold;padding-left: 15px;background: rgb(238,238,238);">测试数据量</td>
-                <td id="test_data_amount" style="font-weight: bolder;"></td>
+                <td style="font-size: medium;font-weight: bold;padding-left: 15px;background: rgb(238,238,238);border: solid 2px;">测试数据量</td>
+                <td id="test_data_amount" style="font-weight: bolder;padding-left: 10px;"></td>
               </tr>
               <tr style="border: solid 3px;height: 40px;">
-                <td style="font-size: medium;font-weight: bold;padding-left: 15px;background: rgb(238,238,238);">验证数据量</td>
-                <td id="val_data_amount" style="font-weight: bolder;"></td>
+                <td style="font-size: medium;font-weight: bold;padding-left: 15px;background: rgb(238,238,238);border: solid 2px;">验证数据量</td>
+                <td id="val_data_amount" style="font-weight: bolder;padding-left: 10px;"></td>
               </tr>
               <tr style="border: solid 3px;height: 40px;">
-                <td style="font-size: medium;font-weight: bold;padding-left: 15px;background: rgb(238,238,238);">数据类别个数</td>
-                <td id="class_counts" style="font-weight: bolder;"></td>
+                <td style="font-size: medium;font-weight: bold;padding-left: 15px;background: rgb(238,238,238);border: solid 2px;">数据类别个数</td>
+                <td id="class_counts" style="font-weight: bolder;padding-left: 10px;"></td>
               </tr>
             </table>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6" style="background: rgba(238,238,238,0.4);height: 345px;">
             <div style="text-align: center;font-weight: bold;font-size: large;margin-bottom:20px;color: #333;">
               数据类别分布
             </div>
@@ -53,11 +53,11 @@
           </div>
       </div>
       <div class="row" style="height: 45%;width: 100%;margin-top:35px;">
-        <div id="sample_data_div" class="col-md-6">
+        <div id="sample_data_div" class="col-md-6" style="height:351px;background: rgba(238,238,238,0.4);">
           <div style="text-align: center;font-weight: bold;font-size: large;margin-left:15px;color: black;">
             训练集样例数据
           </div>
-          <ul id="sample_imgs_ul" style="height: 300px;width: 100px;overflow: auto;display: inline-block;">
+          <ul id="sample_imgs_ul" style="height: 300px;width: 100px;overflow: auto;display: inline-block;background: rgb(238,238,238);">
             <li id="sample_img0_li" style="list-style: none;margin-bottom: 10px;">
               <img id="sample_img0" onclick="sample_img_click(this);" src="${sample0}" style="width: 50px;height: 50px;margin-left: 20px;">
             </li>
@@ -91,7 +91,7 @@
           </ul>
           <div id="bar_chart_histgram" style="width: 440px;height: 320px;margin-top: 0px;display: inline-block;"></div>
         </div>
-        <div id="sample_testdataset_data_div" class="col-md-6">
+        <div id="sample_testdataset_data_div" class="col-md-6" style="height: 351px;background: rgba(238,238,238,0.4);">
           <div style="text-align: center;font-weight: bold;font-size: large;margin-left:15px;color: black;">
             测试集样例数据
           </div>
@@ -171,7 +171,7 @@ body {
   .resizable {
     resize: both;
     overflow: scroll;
-    border: 1px solid black;
+    border: 1px solid rgb(0, 0, 0);
   }
   .dropdown-content{
    width: max-content !important;
@@ -265,15 +265,19 @@ function sample_img_click(e){
   if(sampleId.substring(0,4) === "test"){
     if(prev_click_img_li_test_id !== undefined){
       document.getElementById(prev_click_img_li_test_id).style.backgroundColor="";
+      document.getElementById(prev_click_img_li_test_id).style.opacity = "";
     }
     prev_click_img_li_test_id = sampleId+"_li";
-    document.getElementById(prev_click_img_li_test_id).style.backgroundColor = "chocolate";
+    document.getElementById(prev_click_img_li_test_id).style.backgroundColor = "#00868B";
+    document.getElementById(prev_click_img_li_test_id).style.opacity = "0.5";
   }else{
     if(prev_click_img_li_id !== undefined){
       document.getElementById(prev_click_img_li_id).style.backgroundColor = "";
+      document.getElementById(prev_click_img_li_id).style.opacity = "";
     }
     prev_click_img_li_id = sampleId+"_li";
-    document.getElementById(prev_click_img_li_id).style.backgroundColor = "chocolate";
+    document.getElementById(prev_click_img_li_id).style.backgroundColor = "#00868B";
+    document.getElementById(prev_click_img_li_id).style.opacity = "0.5";
   }
   console.log("current click img id="+sampleId);
   var sampleIdx = parseInt(sampleId.substring(sampleId.length-1));
@@ -299,11 +303,11 @@ function sample_img_click(e){
                   scale:true,
                   name:x_axis_name,
                   nameTextStyle:{
-                    color:"white"
+                    color:"black"
                   },
                   axisLabel:{
                     textStyle:{
-                      color:"white"
+                      color:"black"
                     }
                   }
             },
@@ -313,11 +317,11 @@ function sample_img_click(e){
                   scale:true,
                   name:y_axis_name,
                   nameTextStyle:{
-                    color:"white"
+                    color:"black"
                   },
                   axisLabel:{
                     textStyle:{
-                      color:"white"
+                      color:"black"
                     }
                   }
                 },
@@ -341,13 +345,40 @@ function sample_img_click(e){
                 {
                     name: series_name,
                     type: 'bar',
-                    data: label_counts
+                    data: label_counts,
+                itemStyle: {
+                  normal: {
+                    color: new echarts.graphic.LinearGradient(
+                          0, 0, 0, 1,
+                        [
+                            {offset: 0, color: '#BBFFFF'},   
+                            {offset: 1, color: '#2FDECA'}
+                        ]
+                        )
+                    },
+                    emphasis: {
+                      color: new echarts.graphic.LinearGradient(
+                            0, 0, 0, 1,
+                           [
+                            {offset: 0, color: '#2FDECA'},
+                            {offset: 1, color: '#2FDE80'}
+                           ]
+                      )
+                    }
+                }
                 },
                 {
                     name: series_name,
                     type: 'line',
                     yAxisIndex: 1,
-                    data: label_counts
+                    data: label_counts,
+                    itemStyle:{
+                        normal:{
+                            lineStyle:{
+                                color:"#FF994B"
+                            }
+                        }
+                    }
                 }
             ]
         };
